--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
            <div class="row">
                    <h2 class="pull-left"> I am a 23 year old freelance designer from Tallinn, Estonia who mainly specializes in designing different aspects of the world wide web.
                <br>
+            I speak Estonian and English fluently.
+                       <br>
                   <a href="Robert_Ginter_CV.doc">Here is a link to my resume</a></h2>
           
                     <img src="all6.png" class="col-md-4" id="icons">   
