--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel = "stylesheet" type = "text/css" href = "gallery.css" />
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-106071195-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 
@@ -23,10 +33,10 @@
     <h1 id="skillset" class="text-center"> About </h1>
            <div class="row">
                    <h2 class="pull-left"> I am a 23 year old freelance designer from Tallinn, Estonia who mainly specializes in designing different aspects of the world wide web.
-               <br>
-            I speak Estonian and English fluently.
                        <br>
-                  <a href="Robert_Ginter_CV.doc">Here is a link to my resume</a></h2>
+                       Here is a link to my resume in:
+                       <br>
+                  <a href="Robert_Ginter_CV.doc">Estonian</a> | <a href="Robert_Ginter_CV%20-%20English.doc">English</a></h2>
           
                     <img src="all6.png" class="col-md-4" id="icons">   
             
