--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <div id="about">
 <h1 id="hello"> Hello! </h1>
-   <h2 class="pull-left" id="hello">Hello, my name is Robert and I'm a</h2>
-                        <h2 class="pull-left" id="UXDes">designer with a passion for</h2>
+   <h2 class="pull-left"">Hello, my name is Robert and I'm a</h2>
+                        <h2 class="pull-left">designer with a passion for</h2>
                         <h2 id="animationText" class="pull-left">UX DESIGN</h2>
 </div>
     <div id="skills">
