--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 <div id="about">
 <h1 id="hello"> Hello! </h1>
-   <h2 class="pull-left"">Hello, my name is Robert and I'm a</h2>
-                        <h2 class="pull-left">designer with a passion for</h2>
-                        <h2 id="animationText" class="pull-left">UX DESIGN</h2>
+   <h2>Hello, my name is Robert and I'm a</h2>
+                        <h2>designer with a passion for</h2>
+                        <h2 id="animationText">UX DESIGN</h2>
 </div>
     <div id="skills">
       
