--- a/index.html
+++ b/index.html
@@ -178,5 +178,10 @@
             }
         };
     </script>
+   <script>
+    if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+    alert("Visiting from a mobile browser, this portfolio is best viewed on bigger screens.");
+}
+    </script>
 </body>
 </html>
