--- a/index.html
+++ b/index.html
@@ -41,6 +41,16 @@
             
         </div>
     </div>
+  <div id="Prototypes">
+    <h1 id="frontE" class="text-center"> Prototypes</h1>
+            <div class="row">
+            <h3 class="col-md-4"> I spend most of my time designing prototypes for different products, such as payment platforms or onboarding.
+                <br>
+                <br>
+                For example, this is a simple Javascript based web application using Ajax to get information from the Wikipedia API.
+                </h3>
+    </div>    
+    </div>
     <div id="logos">
         <div class="row">
         <h1 id="logosT"  class="text-center"> Logos </h1>    
